[B]Version 1.1.59[/B]
paradisehill - added search actors & studios